# nodegrainsynth

./: .gitignore  App.tsx  CLAUDE.md  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
.claude/: settings.local.json
components/: Knob.tsx  WaveformDisplay.tsx  WaveformDisplay.tsx.backup
cpp/: CMakeLists.txt
cpp/src/: bindings.cpp  grain.h  grain_engine.cpp  grain_engine.h  lfo.h  param_smoother.h
hooks/: useTouchDrag.ts
public/worklets/: grain-processor.js
services/: IAudioEngine.ts  audioEngine.ts  audioEngineWASM.ts  builtinSamples.ts  engineFactory.ts
utils/: touch.ts
